[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastapi-sa-orm-filter"
authors = [{name = "Oleksandr Zhydyk", email = "zhydykalex@ukr.net"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "sqlalchemy",
    "pydantic-sqlalchemy"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
]
formatting = [
    "flake8",
    "black"
]

[project.urls]
Home = "https://github.com/OleksandrZhydyk/FastAPI-SQLAlchemy-Filters"

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"

[tool.coverage.run]
source = ["fastapi-sqlalchemy-filter"]
