[tool.poetry]
name = "fastapi-sqlalchemy-filters"
version = "0.2.5"
description = ""
authors = ["Alexandr Zhydyk <zhydykalex@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.128.7"
sqlalchemy = "^2.0.41"
sqlalchemy-to-pydantic = "^0.0.8"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
aiosqlite = "^0.22.1"
flit = "^3.10.1"
flake8 = "^7.2.0"


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastapi-sa-orm-filter"
authors = [{name = "Oleksandr Zhydyk", email = "zhydykalex@ukr.net"}]
dynamic = ["version", "description"]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]

requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "sqlalchemy",
    "pydantic",
    "sqlalchemy-to-pydantic"
]

[project.urls]
Home = "https://github.com/OleksandrZhydyk/FastAPI-SQLAlchemy-Filters"
Issues = "https://github.com/OleksandrZhydyk/FastAPI-SQLAlchemy-Filters/issues"
